--- a/index.html
+++ b/index.html
@@ -1,18 +1,92 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
     <title>Simple HTML</title>
     <link rel="stylesheet" href="main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Simple Website</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="https://www.w3schools.com/">Visit W3Schools</a></li>
+                <li><a href="https://getbootstrap.com/">Visit Bootstrap.com</a></li>
+                <li><a href="https://code.visualstudio.com/">Visit Visual Code Studio</a></li>
+                <li><a href="https://www.sublimetext.com/">Visit Sublime Text</a></li>
+                <li><a href="https://atom.io/">Visit Atom</a></li>
+                <li><a href="https://github.com/">Visit Github</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <h1>How to Build your own Simple Website</h1>
 
-    <h2>Hello Everyone</h2>
-    <div class="Split">
-        <p>Today I am Here to teach you to make a simple website for those who need to know what to do.</p>
-        <p></p>
+    <h2>Normal Text</h2>
+    <div class="normaltext">
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam dui sem, fermentum vitae, sagittis id,
+            malesuada in, quam. Fusce suscipit libero eget elit. Ut enim ad minima veniam, quis nostrum exercitationem
+            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Nulla accumsan, elit sit amet
+            varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nullam sapien sem, ornare ac,
+            nonummy non, lobortis a enim. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+            saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel
+            velit. Praesent id justo in neque elementum ultrices. Integer lacinia.
+        </p>
+    </div>
+
+    <br>
+
+    <h4>Bold Text</h4>
+    <div class="boldtext">
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam dui sem, fermentum vitae, sagittis id,
+            malesuada in, quam. Fusce suscipit libero eget elit. Ut enim ad minima veniam, quis nostrum exercitationem
+            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Nulla accumsan, elit sit amet
+            varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nullam sapien sem, ornare ac,
+            nonummy non, lobortis a enim. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+            saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel
+            velit. Praesent id justo in neque elementum ultrices. Integer lacinia.
+        </p>
+    </div>
+
+    <br>
+
+    <h5>Italic Text</h5>
+    <div class="italictext">
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam dui sem, fermentum vitae, sagittis id,
+            malesuada in, quam. Fusce suscipit libero eget elit. Ut enim ad minima veniam, quis nostrum exercitationem
+            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Nulla accumsan, elit sit amet
+            varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nullam sapien sem, ornare ac,
+            nonummy non, lobortis a enim. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+            saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel
+            velit. Praesent id justo in neque elementum ultrices. Integer lacinia.</p>
+    </div>
+
+    <br>
+    <br>
+
+    <img src="Photos/not_hi_res_retro_game.jpg" alt="game1" class="image">
+
+    <br>
+    <br>
+    <div class="links">
+        <p><a href="https://www.w3schools.com/">Visit W3Schools</a></p>
+        <p><a href="https://getbootstrap.com/">Visit Bootstrap</a></p>
+        <p><a href="https://code.visualstudio.com/">Visit Visual Code Studio</a></p>
+        <p><a href="https://www.sublimetext.com/">Visit Sublime Text</a></p>
+        <p><a href="https://atom.io/">Visit Atom</a></p>
+        <p><a href="https://github.com/">Visit Github</a></p>
     </div>
 </body>
 
