--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Simple HTML</title>
+    <title>Simple HTML Website</title>
     <link rel="stylesheet" href="main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,81 +12,74 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
+
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Simple Website</a>
+                <a class="navbar-brand" href="#">Simple Navbar</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="https://www.w3schools.com/">Visit W3Schools</a></li>
-                <li><a href="https://getbootstrap.com/">Visit Bootstrap.com</a></li>
-                <li><a href="https://code.visualstudio.com/">Visit Visual Code Studio</a></li>
-                <li><a href="https://www.sublimetext.com/">Visit Sublime Text</a></li>
-                <li><a href="https://atom.io/">Visit Atom</a></li>
-                <li><a href="https://github.com/">Visit Github</a></li>
+                <li><a href="https://w3schools.com">W3 Schools</a></li>
             </ul>
         </div>
     </nav>
 
-    <h1>How to Build your own Simple Website</h1>
+    <h1>Simple HTML Website</h1>
 
     <h2>Normal Text</h2>
     <div class="normaltext">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam dui sem, fermentum vitae, sagittis id,
-            malesuada in, quam. Fusce suscipit libero eget elit. Ut enim ad minima veniam, quis nostrum exercitationem
-            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Nulla accumsan, elit sit amet
-            varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nullam sapien sem, ornare ac,
-            nonummy non, lobortis a enim. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
-            saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel
-            velit. Praesent id justo in neque elementum ultrices. Integer lacinia.
-        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Nam libero justo
+            laoreet
+            sit amet. Facilisis magna etiam tempor orci eu. Rhoncus dolor purus non enim praesent elementum facilisis
+            leo
+            vel. Bibendum est ultricies integer quis. Egestas dui id ornare arcu odio ut sem. Nunc aliquet bibendum enim
+            facilisis gravida neque. Quam nulla porttitor massa id. Amet facilisis magna etiam tempor orci eu. Morbi
+            enim
+            nunc faucibus a pellentesque. Tellus integer feugiat scelerisque varius morbi enim nunc. Enim facilisis
+            gravida
+            neque convallis a cras semper auctor. Diam donec adipiscing tristique risus nec.</p>
     </div>
 
-    <br>
-
-    <h4>Bold Text</h4>
+    <h3>Bold Text</h3>
     <div class="boldtext">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam dui sem, fermentum vitae, sagittis id,
-            malesuada in, quam. Fusce suscipit libero eget elit. Ut enim ad minima veniam, quis nostrum exercitationem
-            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Nulla accumsan, elit sit amet
-            varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nullam sapien sem, ornare ac,
-            nonummy non, lobortis a enim. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
-            saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel
-            velit. Praesent id justo in neque elementum ultrices. Integer lacinia.
-        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Nam libero justo
+            laoreet
+            sit amet. Facilisis magna etiam tempor orci eu. Rhoncus dolor purus non enim praesent elementum facilisis
+            leo
+            vel. Bibendum est ultricies integer quis. Egestas dui id ornare arcu odio ut sem. Nunc aliquet bibendum enim
+            facilisis gravida neque. Quam nulla porttitor massa id. Amet facilisis magna etiam tempor orci eu. Morbi
+            enim
+            nunc faucibus a pellentesque. Tellus integer feugiat scelerisque varius morbi enim nunc. Enim facilisis
+            gravida
+            neque convallis a cras semper auctor. Diam donec adipiscing tristique risus nec.</p>
     </div>
 
-    <br>
-
-    <h5>Italic Text</h5>
+    <h4>Italic Text</h4>
     <div class="italictext">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam dui sem, fermentum vitae, sagittis id,
-            malesuada in, quam. Fusce suscipit libero eget elit. Ut enim ad minima veniam, quis nostrum exercitationem
-            ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Nulla accumsan, elit sit amet
-            varius semper, nulla mauris mollis quam, tempor suscipit diam nulla vel leo. Nullam sapien sem, ornare ac,
-            nonummy non, lobortis a enim. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
-            saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel
-            velit. Praesent id justo in neque elementum ultrices. Integer lacinia.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Nam libero justo
+            laoreet
+            sit amet. Facilisis magna etiam tempor orci eu. Rhoncus dolor purus non enim praesent elementum facilisis
+            leo
+            vel. Bibendum est ultricies integer quis. Egestas dui id ornare arcu odio ut sem. Nunc aliquet bibendum enim
+            facilisis gravida neque. Quam nulla porttitor massa id. Amet facilisis magna etiam tempor orci eu. Morbi
+            enim
+            nunc faucibus a pellentesque. Tellus integer feugiat scelerisque varius morbi enim nunc. Enim facilisis
+            gravida
+            neque convallis a cras semper auctor. Diam donec adipiscing tristique risus nec.</p>
     </div>
+    <br>
+    <img src="placeholder.png" alt="image" class="image">
 
-    <br>
-    <br>
-
-    <img src="Photos/not_hi_res_retro_game.jpg" alt="game1" class="image">
-
-    <br>
-    <br>
+    <h5>Links</h5>
     <div class="links">
-        <p><a href="https://www.w3schools.com/">Visit W3Schools</a></p>
-        <p><a href="https://getbootstrap.com/">Visit Bootstrap</a></p>
-        <p><a href="https://code.visualstudio.com/">Visit Visual Code Studio</a></p>
-        <p><a href="https://www.sublimetext.com/">Visit Sublime Text</a></p>
-        <p><a href="https://atom.io/">Visit Atom</a></p>
-        <p><a href="https://github.com/">Visit Github</a></p>
+        <p><a href="https://w3schools.com">Visit W3 Schools</a></p>
     </div>
 </body>
 
